---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ???
  Changes:
    - The "Auto-zoom max screenshot size" setting is now "Auto-zoom *target* screenshot size".
    - Auto-zoom will now use precise zoom values to always obtain a screenshot of the target size instead of being restricted to powers of 2. For example it can zoom to x3.2 instead of x2 or x4.
    - Auto-zoom can now zoom higher than x1 if the screenshot would end up smaller than the target size.
    - Default JPG quality setting is now 90 (previously 80).

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-10-14
  Features:
    - Initial release